--- a/_includes/themes/nardoz/default.html
+++ b/_includes/themes/nardoz/default.html
@@ -5,8 +5,6 @@
     <title>{{ page.title }}</title>
     {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
     <meta name="author" content="{{ site.author.name }}">
-
-    <!-- Enable responsive viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
@@ -19,7 +17,7 @@
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
 
     <!-- Le fav and touch icons -->
-  <!-- Update these with your own images
+  <!--
     <link rel="shortcut icon" href="images/favicon.ico">
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
@@ -30,37 +28,45 @@
     <link href="{{ BASE_PATH }}{{ site.JB.atom_path }}" type="application/atom+xml" rel="alternate" title="Sitewide ATOM Feed">
     <link href="{{ BASE_PATH }}{{ site.JB.rss_path }}" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed">
 
+    <script src="{{ ASSET_PATH }}/js/jquery.1.9.1.min.js"></script>
+
   </head>
 
   <body>
-    <div class="navbar">
-      <div class="navbar-inner">
-        <div class="container-narrow">
-          <a class="brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
-          <ul class="nav">
-            {% assign pages_list = site.pages %}
-            {% assign group = 'navigation' %}
-            {% include JB/pages_list %}
-          </ul>
-        </div>
-      </div>
+
+    <div id="navigation">
+        <a class="logo" href="{{ HOME_PATH }}">{{ site.title }}</a>
+        <ul>
+          <li{% if page.url == "talks.html" %} class="active"{% endif %}><a href="{{ BASE_PATH }}talks.html">Talks</a></li>
+          <li{% if page.url == "projects.html" %} class="active"{% endif %}><a href="{{ BASE_PATH }}projects.html">Projects</a></li>
+          <li{% if page.url == "members.html" %} class="active"{% endif %}><a href="{{ BASE_PATH }}community.html">Community</a></li>
+          <li{% if page.url == "blog" %} class="active"{% endif %}><a href="{{ BASE_PATH }}blog">Blog</a></li>
+
+
+          <!--
+          {% assign pages_list = site.pages %}
+          {% assign group = 'navigation' %}
+          {% include JB/pages_list %}
+        -->
+        </ul>
     </div>
 
-    <div class="container-narrow">
+    {{ content }}
 
-      <div class="content">
-        {{ content }}
-      </div>
-      <hr>
+    <div class="container-narrow">
       <footer>
         <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
           with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
           and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
         </p>
       </footer>
-
     </div>
 
     {% include JB/analytics %}
+
+    <script src="{{ ASSET_PATH }}/js/bootstrap.min.js"></script>
+    <script src="{{ ASSET_PATH }}/js/unslider.min.js"></script>
+    <script src="{{ ASSET_PATH }}/js/jquery.stellar.min.js"></script>
+    <script src="{{ ASSET_PATH }}/js/nardoz.js"></script>
   </body>
 </html>
