added isotope and fisotope

--- a/_includes/themes/nardoz/default.html
+++ b/_includes/themes/nardoz/default.html
@@ -13,7 +13,8 @@
     <![endif]-->
 
     <!-- Le styles -->
-    <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.2.2.2.min.css" rel="stylesheet">
+    <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
 
     <!-- Le fav and touch icons -->
@@ -66,7 +67,10 @@
 
     <script src="{{ ASSET_PATH }}/js/bootstrap.min.js"></script>
     <script src="{{ ASSET_PATH }}/js/unslider.min.js"></script>
-    <script src="{{ ASSET_PATH }}/js/jquery.stellar.min.js"></script>
+    <script src="{{ ASSET_PATH }}/js/jquery.1.9.1.min.js"></script>
+    <script src="{{ ASSET_PATH }}/js/jquery.isotope.min.js"></script>
+    <script src="{{ ASSET_PATH }}/js/jquery.ba-bbq.min.js"></script>
+    <script src="{{ ASSET_PATH }}/js/fisotope.js"></script>
     <script src="{{ ASSET_PATH }}/js/nardoz.js"></script>
   </body>
 </html>
