Added all projects

--- a/_includes/themes/nardoz/default.html
+++ b/_includes/themes/nardoz/default.html
@@ -71,6 +71,7 @@
     <script src="{{ ASSET_PATH }}/js/jquery.isotope.min.js"></script>
     <script src="{{ ASSET_PATH }}/js/jquery.ba-bbq.min.js"></script>
     <script src="{{ ASSET_PATH }}/js/fisotope.js"></script>
+    <script src="{{ ASSET_PATH }}/js/projects.js"></script>
     <script src="{{ ASSET_PATH }}/js/nardoz.js"></script>
   </body>
 </html>
