--- a/_includes/themes/nardoz/default.html
+++ b/_includes/themes/nardoz/default.html
@@ -39,8 +39,8 @@
         <a class="logo" href="{{ HOME_PATH }}">{{ site.title }}</a>
         <ul>
           <li{% if page.url == "talks.html" %} class="active"{% endif %}><a href="{{ BASE_PATH }}talks.html">Talks</a></li>
-          <li{% if page.url == "projects.html" %} class="active"{% endif %}><a href="{{ BASE_PATH }}projects.html">Projects</a></li>
-          <li{% if page.url == "members.html" %} class="active"{% endif %}><a href="{{ BASE_PATH }}community.html">Community</a></li>
+          <li{% if page.url == "projects.html" %} class="active"{% endif %}><a href="{{ BASE_PATH }}projects.html">Proyectos</a></li>
+          <li{% if page.url == "members.html" %} class="active"{% endif %}><a href="{{ BASE_PATH }}community.html">Comunidad</a></li>
           <li{% if page.url == "blog" %} class="active"{% endif %}><a href="{{ BASE_PATH }}blog">Blog</a></li>
 
 
