--- a/_includes/themes/nardoz/default.html
+++ b/_includes/themes/nardoz/default.html
@@ -41,7 +41,7 @@
           <li{% if page.url == "talks.html" %} class="active"{% endif %}><a href="{{ BASE_PATH }}talks.html">Talks</a></li>
           <li{% if page.url == "projects.html" %} class="active"{% endif %}><a href="{{ BASE_PATH }}projects.html">Proyectos</a></li>
           <li{% if page.url == "members.html" %} class="active"{% endif %}><a href="{{ BASE_PATH }}community.html">Comunidad</a></li>
-          <li{% if page.url == "blog" %} class="active"{% endif %}><a href="{{ BASE_PATH }}blog">Blog</a></li>
+          <li{% if page.url == "blog.html" %} class="active"{% endif %}><a href="{{ BASE_PATH }}blog.html">Blog</a></li>
 
 
           <!--
