Added missing JS + Community

--- a/_includes/pages/community.html
+++ b/_includes/pages/community.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid red-row">
 	<div class="row-fluid title">
 		<div class="span5">
 			<h2>Comunidad</h2>
@@ -7,204 +7,229 @@
 	</div>
 	<div class="row-fluid desc">
 		<div class="span8">
-			<p>Somos un grupo de <strong>coders</strong> que realiza <strong>charlas</strong> de programación y otras nerdeadas, usando como combustible <strong>cerveza</strong>. Principalmente:</p>
+			<p>Somos un grupo de <strong>coders</strong> (y no tanto) que realiza <strong>charlas</strong> de programación y otras nerdeadas, usando como combustible <strong>cerveza</strong>. Principalmente:</p>
 		</div>
 	</div>
 	<div class="row-fluid content">
-		<div class="span4">
-			<ul class="article-tags">
-				<li class="current" data-blog="alan"><i class="icon-user"></i> Alan Reid</li>
-				<li data-blog="gustavo"><i class="icon-user"></i> Gustavo Arjones</li>
-				<li data-blog="diego"><i class="icon-user"></i> Diego Ram&iacute;rez</li>
-				<li data-blog="luis"><i class="icon-user"></i> Luis Farzati</li>
-				<!-- <li data-blog="pablo"><i class="icon-user"></i> Pablo Paladino</li>
-				<li data-blog="sebas"><i class="icon-user"></i> Sebasti&aacute;n Scarano</li>
-				<li data-blog="nico"><i class="icon-user"></i> Nicol&aacute;s Mel&eacute;ndez</li>
-				<li data-blog="jorge"><i class="icon-user"></i> Jorge Aliss</li> -->
+		<div class="span10">
+			<ul class="member-grid">
+				<li>
+					<img src="https://si0.twimg.com/profile_images/378800000014358398/03df1908ab86630af5cc5420decd579f.png" alt="" class="img-circle" />
+					<div class="member-info">
+						<h3>Alan Reid</h3>
+						<p>CTO at Zenith Sistemas SA. Organizer of Nardoz.</p>
+						<p>
+							<a target="_blank" href="http://twitter.com/alan_reid"><i class="icon-twitter"></i></a>
+							<a href="/projects.html#query=Alan+Reid"><i class="icon-code"></i></a>
+						</p>
+					</div>
+				</li>
+				<li>
+					<img src="https://si0.twimg.com/profile_images/3730371638/691f471a306031b9aac441396d7034ad.jpeg" alt="" class="img-circle" />
+					<div class="member-info">
+						<h3>Gustavo Arjones</h3>
+						<p>Entrepreneur and CTO of Socialmetrix</p>
+						<p>
+							<a target="_blank" href="http://twitter.com/arjones"><i class="icon-twitter"></i></a>
+						</p>
+					</div>
+				</li>
+				<li>
+					<img src="https://si0.twimg.com/profile_images/1157351292/IMG_2299.JPG" alt="" class="img-circle" />
+					<div class="member-info">
+						<h3>Diego Ramírez</h3>
+						<p>Pinche Programmer</p>
+						<p>
+							<a target="_blank" href="https://twitter.com/diegoram"><i class="icon-twitter"></i></a>
+						</p>
+					</div>
+				</li>
+				<li>
+					<img src="https://si0.twimg.com/profile_images/3416584414/374eee5f98fdc59619b14baf26b58f5f.jpeg" alt="" class="img-circle" />
+					<div class="member-info">
+						<h3 class="one-line">Luis Farzati</h3>
+						<p>Programador con busarda. Evangelista del Apocalipsis</p>
+						<p>
+							<a target="_blank" href="https://twitter.com/luisfarzati"><i class="icon-twitter"></i></a>
+						</p>
+					</div>
+				</li>
+				<li>
+					<img src="https://si0.twimg.com/profile_images/3606173010/73df77e498aa4aa2200f6266242ccec0.jpeg" alt="" class="img-circle" />
+					<div class="member-info">
+						<h3>Pablo Paladino</h3>
+						<p>Web Technologies Engineer</p>
+						<p>
+							<a target="_blank" href="https://twitter.com/palamago"><i class="icon-twitter"></i></a>
+							<a href="/projects.html#query=Pablo+Paladino"><i class="icon-code"></i></a>
+						</p>
+					</div>
+				</li>
+				<li>
+					<img src="https://si0.twimg.com/profile_images/1557699557/penguin_armed.jpg" alt="" class="img-circle" />
+					<div class="member-info">
+						<h3>Sebastián Scarano</h3>
+						<p>Lead en Ministerio de Trabajo</p>
+						<p>
+							<a target="_blank" href="https://twitter.com/develsas"><i class="icon-twitter"></i></a>
+							<a href="/projects.html#query=Sebastián+Scarano"><i class="icon-code"></i></a>
+						</p>
+					</div>
+				</li>
+				<li>
+					<img src="https://si0.twimg.com/profile_images/3064331698/ab8843bf13bc0392c11c46d9deeb7e08.jpeg" alt="" class="img-circle" />
+					<div class="member-info">
+						<h3>Nicolás Meléndez</h3>
+						<p>Arquitecto Java</p>
+						<p>
+							<a target="_blank" href="https://twitter.com/nfmelendez"><i class="icon-twitter"></i></a>
+							<a href="/projects.html#query=Nicolás+Meléndez"><i class="icon-code"></i></a>
+						</p>
+					</div>
+				</li>
+				<li>
+					<img src="https://si0.twimg.com/profile_images/3052631576/f2ce53cf07a9ab508b8f9004d149f5a1.jpeg" alt="" class="img-circle" />
+					<div class="member-info">
+						<h3>Walter Franck</h3>
+						<p>Web Developer</p>
+						<p>
+							<a target="_blank" href="https://twitter.com/wfranck"><i class="icon-twitter"></i></a>
+						</p>
+					</div>
+				</li>
+				<li>
+					<img src="https://si0.twimg.com/profile_images/1598161768/jorge_avatar_big.jpg" alt="" class="img-circle" />
+					<div class="member-info">
+						<h3 class="one-line">Jorge Aliss</h3>
+						<p>Father, Geek, Freelancer. Scala &amp; Play Framework fan</p>
+						<p>
+							<a target="_blank" href="https://twitter.com/jaliss"><i class="icon-twitter"></i></a>
+						</p>
+					</div>
+				</li>
+				<li>
+					<img src="http://cl.ly/image/1k1Y330T240i/IMG_4075_4.png" alt="" class="img-circle" />
+					<div class="member-info">
+						<h3>Chris Mordue</h3>
+						<p>Analytics, distributed systems, backpacking</p>
+						<p>
+							<a target="_blank" href="https://twitter.com/cmordue"><i class="icon-twitter"></i></a>
+						</p>
+					</div>
+				</li>
+				<li>
+					<img src="https://si0.twimg.com/profile_images/590375995/frodriguez.jpg" alt="" class="img-circle" />
+					<div class="member-info">
+						<h3>Fernando Rodríguez</h3>
+						<p>Tech Enthusiast. Professor of Distributed Systems</p>
+						<p>
+							<a target="_blank" href="https://twitter.com/frodriguez"><i class="icon-twitter"></i></a>
+						</p>
+					</div>
+				</li>
+				<li>
+					<img src="http://cl.ly/image/00390F1B360n/img.png" alt="" class="img-circle" />
+					<div class="member-info">
+						<h3>Diego Dell'Era</h3>
+						<p>Developer at Socialmetrix</p>
+						<p>
+							<a target="_blank" href="https://twitter.com/diegodellera"><i class="icon-twitter"></i></a>
+						</p>
+					</div>
+				</li>
+				<li>
+					<img src="https://si0.twimg.com/profile_images/1627538423/fottt.jpg" alt="" class="img-circle" />
+					<div class="member-info">
+						<h3>Pablo Rodríguez</h3>
+						<p>CEO at EstiloWeb.net</p>
+						<p>
+							<a target="_blank" href="https://twitter.com/derfarg"><i class="icon-twitter"></i></a>
+						</p>
+					</div>
+				</li>
+				<li>
+					<img src="https://si0.twimg.com/profile_images/1904315197/martin.jpg" alt="" class="img-circle" />
+					<div class="member-info">
+						<h3>Martín Gontovnikas</h3>
+						<p>Geek, Nerd, Coder &amp; Fun</p>
+						<p>
+							<a target="_blank" href="https://twitter.com/mgonto"><i class="icon-twitter"></i></a>
+							<a href="/projects.html#query=Martín+Gontovnikas"><i class="icon-code"></i></a>
+						</p>
+					</div>
+				</li>
+				<li>
+					<img src="https://si0.twimg.com/profile_images/3406182551/337fbb252c1feebb142aa5c73ef98b6a.jpeg" alt="" class="img-circle" />
+					<div class="member-info">
+						<h3>Matías Saguir</h3>
+						<p>Anime, Programación, Chábe y quizás Literatura</p>
+						<p>
+							<a target="_blank" href="https://twitter.com/mativs"><i class="icon-twitter"></i></a>
+						</p>
+					</div>
+				</li>
+				<li>
+					<img src="https://si0.twimg.com/profile_images/378800000008943621/ca8e4269124e52977fac973b919b6bca.jpeg" alt="" class="img-circle" />
+					<div class="member-info">
+						<h3>Matías Urbano</h3>
+						<p>Enterpreneur &amp; Developer</p>
+						<p>
+							<a target="_blank" href="https://twitter.com/matiasurbano"><i class="icon-twitter"></i></a>
+							<a href="/projects.html#query=Matías+Urbano"><i class="icon-code"></i></a>
+						</p>
+					</div>
+				</li>
+				<li>
+					<img src="https://si0.twimg.com/profile_images/378800000008960145/25663f39e4287f3fe24ef9f41538c9b9.jpeg" alt="" class="img-circle" />
+					<div class="member-info">
+						<h3>Matías Almada</h3>
+						<p>Desarrollador Web</p>
+						<p>
+							<a target="_blank" href="https://twitter.com/hi_matt"><i class="icon-twitter"></i></a>
+						</p>
+					</div>
+				</li>
+				<li>
+					<img src="http://cl.ly/image/1y0L3T1V242Z/Profile_-_7.png" alt="" class="img-circle" />
+					<div class="member-info">
+						<h3>Max Kraszewski</h3>
+						<p>Cofounder &amp; CTO de Psicofxp y Opicos</p>
+						<p>
+							<a target="_blank" href="https://twitter.com/minimalart"><i class="icon-twitter"></i></a>
+						</p>
+					</div>
+				</li>
+				<li>
+					<img src="https://si0.twimg.com/profile_images/1201114878/avatarguido.jpg" alt="" class="img-circle" />
+					<div class="member-info">
+						<h3>Guido Vilariño</h3>
+						<p>Co-founder at Fanwards</p>
+						<p>
+							<a target="_blank" href="https://twitter.com/gvilarino"><i class="icon-twitter"></i></a>
+						</p>
+					</div>
+				</li>
+				<!-- <li>
+					<img src="https://si0.twimg.com/profile_images/1873834431/image.jpg" alt="" class="img-circle" />
+					<div class="member-info">
+						<h3>Tom Roggero</h3>
+						<p>Developer, runner &amp; UX lover</p>
+						<p>
+							<a target="_blank" href="https://twitter.com/tomasdev"><i class="icon-twitter"></i></a>
+						</p>
+					</div>
+				</li> -->
+				<li>
+					<img src="https://si0.twimg.com/profile_images/3750709184/6b0d874fb982314fe357d03800cee2c1.png" alt="" class="img-circle" />
+					<div class="member-info">
+						<h3>Davo Galavotti</h3>
+						<p>Data visualization and digital creative</p>
+						<p>
+							<a target="_blank" href="https://twitter.com/pixelbeat"><i class="icon-twitter"></i></a>
+						</p>
+					</div>
+				</li>
 			</ul>
 		</div>
-		<div class="span8 slide current" data-blog="alan">
-			<div class="row-fluid">
-				<div class="span6 expand">
-					<h4>Alan Reid</h4>
-					<p><img src="https://si0.twimg.com/profile_images/378800000014358398/03df1908ab86630af5cc5420decd579f.png" alt=""></p>
-				</div>
-				<div class="span6 visible-desktop">
-					<h4>Fundador &amp; Organizador</h4>
-					<p>CTO en Zenith Sistemas SA.</p>
-					<p><a target="_blank" href="https://twitter.com/alan_reid"><i class="icon-twitter"></i> @alan_reid</a></p>
-				</div>
-			</div>
-		</div>
-		<div class="span8 slide" data-blog="gustavo">
-			<div class="row-fluid">
-				<div class="span6 expand">
-					<h4>Gustavo Arjones</h4>
-					<p><img src="" alt=""></p>
-				</div>
-				<div class="span6 visible-desktop">
-					<h4>Fundador</h4>
-					<p></p>
-					<p><i class="icon-twitter"></i> @</p>
-				</div>
-			</div>
-		</div>
-		<div class="span8 slide" data-blog="diego">
-			<div class="row-fluid">
-				<div class="span6 expand">
-					<h4>Diego Ram&iacute;rez</h4>
-					<p><img src="" alt=""></p>
-				</div>
-				<div class="span6 visible-desktop">
-					<h4>Fundador</h4>
-					<p></p>
-					<p><i class="icon-twitter"></i> @</p>
-				</div>
-			</div>
-		</div>
-		<div class="span8 slide" data-blog="luis">
-			<div class="row-fluid">
-				<div class="span6 expand">
-					<h4>Luis Farzati</h4>
-					<p><img src="" alt=""></p>
-				</div>
-				<div class="span6 visible-desktop">
-					<h4>Fundador</h4>
-					<p></p>
-					<p><i class="icon-twitter"></i> @</p>
-				</div>
-			</div>
-		</div>
-		<!-- <div class="span8 slide" data-blog="pablo">
-			<div class="row-fluid">
-				<div class="span6 expand">
-					<h4></h4>
-					<p><img src="" alt=""></p>
-				</div>
-				<div class="span6 visible-desktop">
-					<h4>Mini bio</h4>
-					<p></p>
-					<p><i class="icon-twitter"></i> @</p>
-				</div>
-			</div>
-		</div>
-		<div class="span8 slide" data-blog="sebas">
-			<div class="row-fluid">
-				<div class="span6 expand">
-					<h4></h4>
-					<p><img src="" alt=""></p>
-				</div>
-				<div class="span6 visible-desktop">
-					<h4>Mini bio</h4>
-					<p></p>
-					<p><i class="icon-twitter"></i> @</p>
-				</div>
-			</div>
-		</div>
-		<div class="span8 slide" data-blog="nico">
-			<div class="row-fluid">
-				<div class="span6 expand">
-					<h4></h4>
-					<p><img src="" alt=""></p>
-				</div>
-				<div class="span6 visible-desktop">
-					<h4>Mini bio</h4>
-					<p></p>
-					<p><i class="icon-twitter"></i> @</p>
-				</div>
-			</div>
-		</div>
-		<div class="span8 slide" data-blog="jorge">
-			<div class="row-fluid">
-				<div class="span6 expand">
-					<h4></h4>
-					<p><img src="" alt=""></p>
-				</div>
-				<div class="span6 visible-desktop">
-					<h4>Mini bio</h4>
-					<p></p>
-					<p><i class="icon-twitter"></i> @</p>
-				</div>
-			</div>
-		</div> -->
 	</div>
-</div>
-
-
-<h3>Miembros de Nardoz</h3>
-
-<table id="members" class="table table-striped">
-	<tbody>
-		<tr>
-		  <td class="name">Alan Reid</td>
-		  <td><span class="label label-info">Fundador</span> <span class="label label-warning">Organizador</span></td>
-		  <td class="follow"><a href="https://twitter.com/alan_reid" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @alan_reid</a></td>
-		</tr>
-		<tr>
-		  <td class="name">Gustavo Arjones</td>
-		  <td> <span class="label label-info">Fundador</span></td>
-		  <td class="follow"><a href="https://twitter.com/arjones" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @arjones</a></td>
-		</tr>
-		<tr>
-		  <td class="name">Diego Ramírez</td>
-		  <td> <span class="label label-info">Fundador</span></td>
-		  <td class="follow"><a href="https://twitter.com/diegoram" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @diegoram</a></td>
-		</tr>
-		<tr>
-		  <td class="name">Luis Farzati</td>
-		  <td> <span class="label label-info">Fundador</span></td>
-		  <td class="follow"><a href="https://twitter.com/luisfarzati" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @luisfarzati</a></td>
-		</tr>
-		<tr>
-		  <td colspan="2" class="name">Pablo Paladino</td>
-		  <td class="follow"><a href="https://twitter.com/palamago" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @palamago</a></td>
-		</tr>
-		<tr>
-		  <td colspan="2" class="name">Sebastián Scarano</td>
-		  <td class="follow"><a href="https://twitter.com/develsas" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @develsas</a></td>
-		</tr>
-		<tr>
-		  <td colspan="2" class="name">Nicolás Meléndez</td>
-		  <td class="follow"><a href="https://twitter.com/nfmelendez" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @nfmelendez</a></td>
-		</tr>
-		<tr>
-		  <td colspan="2" class="name">Jorge Aliss</td>
-		  <td class="follow"><a href="https://twitter.com/jaliss" class="twitter-follow-button" data-show-count="false" data-lang="es" data-size="large">Seguir a @jaliss</a></td>
-		</tr>
-	</tbody>
-</table>
-
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-
-<h3>Grupos relacionados a Nardoz</h3>
-
-<div class="row groups">
-
-	<div class="span6 meetup">
-		<iframe width="225" height="320" src="http://meetu.ps/1HTmpl" frameborder="0"></iframe>
-	</div>
-
-	<div class="span6 meetup">
-		<iframe width="225" height="320" src="http://meetu.ps/1HTqFb" frameborder="0"></iframe>
-	</div>
-
-</div>
-
-<div class="row groups">
-
-	<div class="span6 meetup">
-		<iframe width="225" height="320" src="http://meetu.ps/1HW3Cg" frameborder="0"></iframe>
-	</div>
-
-	<div class="span6 meetup">
-		<iframe width="225" height="320" src="http://meetu.ps/1HTr7n" frameborder="0"></iframe>
-	</div>
-
-</div>
-
-<div class="row groups">
-	<div class="span6 meetup">
-		<iframe width="225" height="500" src="http://meetu.ps/1HTs2T" frameborder="0"></iframe>
-	</div>
-
 </div>
