--- a/_includes/themes/nardoz/default.html
+++ b/_includes/themes/nardoz/default.html
@@ -31,6 +31,7 @@
     <link href="{{ BASE_PATH }}{{ site.JB.rss_path }}" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed">
 
     <script src="{{ ASSET_PATH }}/js/jquery.1.9.1.min.js"></script>
+    <script src="{{ ASSET_PATH }}/js/modernizr.js"></script>
 
   </head>
 
@@ -97,8 +98,10 @@
 
     {% include JB/analytics %}
 
-    <script src="{{ ASSET_PATH }}/js/jquery.1.9.1.min.js"></script>
     <script src="{{ ASSET_PATH }}/js/bootstrap.min.js"></script>
+    <script src="{{ ASSET_PATH }}/js/waypoints.min.js"></script>
+    <script src="{{ ASSET_PATH }}/js/jquery.knob.js"></script>
+    <script src="{{ ASSET_PATH }}/js/jquery.easing.1.3.js"></script>
     <!-- <script src="{{ ASSET_PATH }}/js/jquery.isotope.min.js"></script>
     <script src="{{ ASSET_PATH }}/js/unslider.min.js"></script>
     <script src="{{ ASSET_PATH }}/js/jquery.ba-bbq.min.js"></script>
