Scaffolding cleanup + projects done

--- a/_includes/pages/community.html
+++ b/_includes/pages/community.html
@@ -20,7 +20,7 @@
 						<p>CTO at Zenith Sistemas SA. Organizer of Nardoz.</p>
 						<p>
 							<a target="_blank" href="http://twitter.com/alan_reid"><i class="icon-twitter"></i></a>
-							<a href="/projects.html#query=Alan+Reid"><i class="icon-code"></i></a>
+							<a rel="projects" href="/#query=Alan+Reid"><i class="icon-code"></i></a>
 						</p>
 					</div>
 				</li>
@@ -61,7 +61,7 @@
 						<p>Web Technologies Engineer</p>
 						<p>
 							<a target="_blank" href="https://twitter.com/palamago"><i class="icon-twitter"></i></a>
-							<a href="/projects.html#query=Pablo+Paladino"><i class="icon-code"></i></a>
+							<a rel="projects" href="/#query=Pablo+Paladino"><i class="icon-code"></i></a>
 						</p>
 					</div>
 				</li>
@@ -72,7 +72,7 @@
 						<p>Lead en Ministerio de Trabajo</p>
 						<p>
 							<a target="_blank" href="https://twitter.com/develsas"><i class="icon-twitter"></i></a>
-							<a href="/projects.html#query=Sebastián+Scarano"><i class="icon-code"></i></a>
+							<a rel="projects" href="/#query=Sebastián+Scarano"><i class="icon-code"></i></a>
 						</p>
 					</div>
 				</li>
@@ -83,7 +83,7 @@
 						<p>Arquitecto Java</p>
 						<p>
 							<a target="_blank" href="https://twitter.com/nfmelendez"><i class="icon-twitter"></i></a>
-							<a href="/projects.html#query=Nicolás+Meléndez"><i class="icon-code"></i></a>
+							<a rel="projects" href="/#query=Nicolás+Meléndez"><i class="icon-code"></i></a>
 						</p>
 					</div>
 				</li>
@@ -154,7 +154,7 @@
 						<p>Geek, Nerd, Coder &amp; Fun</p>
 						<p>
 							<a target="_blank" href="https://twitter.com/mgonto"><i class="icon-twitter"></i></a>
-							<a href="/projects.html#query=Martín+Gontovnikas"><i class="icon-code"></i></a>
+							<a rel="projects" href="/#query=Martín+Gontovnikas"><i class="icon-code"></i></a>
 						</p>
 					</div>
 				</li>
@@ -175,7 +175,7 @@
 						<p>Enterpreneur &amp; Developer</p>
 						<p>
 							<a target="_blank" href="https://twitter.com/matiasurbano"><i class="icon-twitter"></i></a>
-							<a href="/projects.html#query=Matías+Urbano"><i class="icon-code"></i></a>
+							<a rel="projects" href="/#query=Matías+Urbano"><i class="icon-code"></i></a>
 						</p>
 					</div>
 				</li>
