--- a/_includes/pages/projects.html
+++ b/_includes/pages/projects.html
@@ -1,14 +1,12 @@
----
-layout: default
-title: Proyectos
----
-{% include JB/setup %}
-
-<div class="container-projects">
-
-  <div class="page-header">
-    <h1>{{ page.title }}</h1>
+<div class="row-fluid title">
+  <div class="span4">
+    <h2>Projects</h2>
   </div>
+  <div class="span8 hidden-phone alt">
+    <hr>
+  </div>
+</div>
+<div class="container-projects row-fluid">
 
   <div id="search">
     <input type="text" class="fiso-search" name="query" placeholder="Buscar" />
