--- a/_includes/themes/nardoz/default.html
+++ b/_includes/themes/nardoz/default.html
@@ -76,7 +76,7 @@
                 {% include pages/community.html %}
             </section>
             <section class="section" id="section3" data-section="3">
-                //
+                {% include pages/projects.html %}
             </section>
             <section class="section" id="section4" data-section="4">
                 //
@@ -102,11 +102,11 @@
     <script src="{{ ASSET_PATH }}/js/waypoints.min.js"></script>
     <script src="{{ ASSET_PATH }}/js/jquery.knob.js"></script>
     <script src="{{ ASSET_PATH }}/js/jquery.easing.1.3.js"></script>
-    <!-- <script src="{{ ASSET_PATH }}/js/jquery.isotope.min.js"></script>
-    <script src="{{ ASSET_PATH }}/js/unslider.min.js"></script>
+    <script src="{{ ASSET_PATH }}/js/jquery.isotope.min.js"></script>
+    <!-- <script src="{{ ASSET_PATH }}/js/unslider.min.js"></script> -->
     <script src="{{ ASSET_PATH }}/js/jquery.ba-bbq.min.js"></script>
     <script src="{{ ASSET_PATH }}/js/fisotope.js"></script>
-    <script src="{{ ASSET_PATH }}/js/projects.js"></script> -->
+    <script src="{{ ASSET_PATH }}/js/projects.js"></script>
     <script src="{{ ASSET_PATH }}/js/nardoz.js"></script>
   </body>
 </html>
